--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
          <a class="mobile-btn" href="#nav-wrap" title="Show navigation">Show navigation</a>
 	      <a class="mobile-btn" href="#" title="Hide navigation">Hide navigation</a>
 
+          <!-- Section areas --> 
          <ul id="nav" class="nav">
             <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
             <li><a class="smoothscroll" href="#about">About</a></li>
@@ -56,11 +57,13 @@
 
       <div class="row banner">
          <div class="banner-text">
+             <!-- Header intro paragraph --> 
             <h1 class="responsive-headline">I'm Mukul Modi.</h1>
-            <h3>I'm a <span>computer science</span> student studying at <span>The University of Texas at Dallas</span>.I love reading and following about the latest tech and writing about it. Feel free to <a class="smoothscroll" href="#about">start scrolling</a> to see more <a class="smoothscroll" href="#about">about me</a>.</h3>
+            <h3>I'm a <span>computer science</span> student studying at <span>The University of Texas at Dallas</span>.I enjoy reading and following the latest in tech. Feel free to <a class="smoothscroll" href="#about">start scrolling</a> to see more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
-               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                <!--- Icons to G+ and LinkedIn --> 
+               <li><a href="https://www.linkedin.com/in/mukulmodi/"><i class="fa fa-google-plus"></i></a></li>
                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
             </ul>
          </div>
