Finished education section

--- a/index.html
+++ b/index.html
@@ -149,12 +149,21 @@
                   <p class="info">B.S in Computer Science <span>&bull;</span> <em class="date">December 2018</em></p>
 
                   <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+                  Relevant Computer Science Coursework include the following:
+                    <p> <!-- Indented List, bullet points -->
+                      <ul>
+                        <li> <p style="margin-left: 40px"> Discrete Mathematics - Study of advanced counting methods, reccurence relations, and graph theory. </p> </li>
+                        <li> <p style="margin-left: 40px"> Organization of Programming Languages - Principles of design and implementation of programming languages. </p>
+                        </li>
+                        <li> <p style="margin-left: 40px"> C/C++ in a Unix Environment - Utilizing object oriented programming techniques while also becoming familiar with a UNIX environment. </p>
+                        </li>
+                        <li> <p style="margin-left: 40px"> Algorithm Analysis &amp; Data Structures - Big O-notation and time complexity analysis of various data structures including stacks, queues, trees, heaps, hashing, and various sorting techniques. </p>
+                        </li>
+                        <li> <p style="margin-left: 40px"> Software Engineering -  Study of software life cycle models, techniques for software design and testing. </p>
+                        <li> <p style="margin-left: 40px"> Digital Logic &amp; Computer Design - Boolean algebra and logic circuits; gate level design, registers, and memory unit; Design of data path and control unit for a small computer. </p>
+                        </li>
+                      </ul>      
                   </p>
-
                </div>
 
             </div> <!-- item end -->
@@ -164,12 +173,12 @@
       </div> <!-- End Education -->
 
 
-      <!-- Work
+      <!-- Project Work
       ----------------------------------------------- -->
       <div class="row work">
 
          <div class="three columns header-col">
-            <h1><span>Work</span></h1>
+            <h1><span>Personal Projects</span></h1>
          </div>
 
          <div class="nine columns main-col">
@@ -220,7 +229,7 @@
       <div class="row skill">
 
          <div class="three columns header-col">
-            <h1><span>Skills</span></h1>
+            <h1><span>Work</span></h1>
          </div>
 
          <div class="nine columns main-col">
