--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
          <ul id="nav" class="nav">
             <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
             <li><a class="smoothscroll" href="#about">About</a></li>
-	         <li><a class="smoothscroll" href="#resume">Resume</a></li>
-            <li><a class="smoothscroll" href="#experience">Experience</a></li>
-            <li><a class="smoothscroll" href="#coursework">Coursework</a></li>
+	         <li><a class="smoothscroll" href="#Education">Education</a></li>
+            <li><a class="smoothscroll" href="#Projects">Project Work</a></li>
             <li><a class="smoothscroll" href="#contact">Contact</a></li>
          </ul> <!-- end #nav -->
 
@@ -98,7 +97,7 @@
                   <p class="info">B.S in Computer Science <span>&bull;</span> <em class="date">December 2018</em></p>
 
                   <p>
-                  Relevant Computer Science Coursework include the following:
+                  Relevant Computer Science Coursework include the following: </p>
                     <p> <!-- Indented List, bullet points -->
                       <ul class = "disc">
                         <li> Discrete Mathematics - Study of advanced counting methods, reccurence relations, and graph theory. </li>
@@ -117,7 +116,9 @@
 
       </div> <!-- End Education -->
 
+</section>
 
+<section id="Projects">
       <!-- Project Work
       ----------------------------------------------- -->
       <div class="row work">
@@ -190,7 +191,7 @@
       <div class="row skill">
 
          <div class="three columns header-col">
-            <h3><span>Work</span></h3>
+            <h1><span>Work</span></h1>
          </div>
 
          <div class="nine columns main-col">
@@ -206,6 +207,7 @@
       </div> <!-- End skills -->
 
    </section> <!-- Resume Section End-->
+
 
 
    <!-- Portfolio Section
