Modified Android Application section with more detail

--- a/index.html
+++ b/index.html
@@ -138,11 +138,14 @@
                <div class="twelve columns">
 
                   <h3 style="color:gray;">Android Applications</h3>
+                  <h2 style="color:gray;""> Helped design user interfaces and partial development on various Android Applications published on the Google Play Store </h2>
 
                   <p> <!--- Idented with bullet points -->
                     <ul class = "disc">
-                    <li> Designed user interfaces for Android Applications published on the Google Play Store. Total Application downloads are approximately 100,000. </li>
-                    <li> Currently working to create a new application that helps automate system settings based on various user-created "triggers", which can be set various states the phone is in (location, time, etc). </li>
+                    <li> <b> Smart Actions: </b> Currently in development, allows the user to automate actions based on trigger events determined by the user. Example of this is the user setting the phone's Ringer volume to a specific level upon arriving to a GPS region designated as "Home" or "Workplace" </li>
+                    <li> <b> Power Wi-Fi: </b> Automating the activation or deactivation of Wi-Fi and Bluetooth based on set events </li>
+                    <li> Total application downloads are over 100,000 </li>
+                    
                     </ul>
                   </p>
 
