Swapped location of Android Application and Java Projects

--- a/index.html
+++ b/index.html
@@ -137,6 +137,26 @@
 
                <div class="twelve columns">
 
+                  <h3 style="color:gray;">Java Projects</h3>
+
+                  <p>
+                    <ul class = "disc">
+                    <li> <b>Emotion Parser - </b>Developing a program that reads in a sentence of text and attempts to determine the underlying emotion of the given text. </li>
+                    <li> <b>Web Crawler - </b>Web crawler that searches for a user given phrase, and searches for it on a selected website and any sublinked pages. </li>
+                    <li> <b>Kumon Book Tracking Application - </b>Allow Kumon owner to keep track of answer booklets being checked out and track which students have a book at any given time. </li>
+                    <li> <b>Huffman Compression - </b>Recreated the Huffman Algorithm, which uses frequency trees to have lossless data compression. </li>
+                    <li> <b>Math Matrix Solver - </b>Created a program that models and solves math matrices. </li>
+                    </ul>
+                  </p>
+               </div>
+
+            </div> <!-- Java end -->
+
+            <!-- Android Section -->
+            <div class="row item">
+
+               <div class="twelve columns">
+
                   <h3 style="color:gray;">Android Applications</h3>
                   <h2 style="color:gray;""> Helped design user interfaces and partial development on various Android Applications published on the Google Play Store </h2>
 
@@ -152,25 +172,6 @@
                </div>
 
             </div> <!-- Android end -->
-
-            <div class="row item">
-
-               <div class="twelve columns">
-
-                  <h3 style="color:gray;">Java Projects</h3>
-
-                  <p>
-                    <ul class = "disc">
-                    <li> <b>Emotion Parser - </b>Developing a program that reads in a sentence of text and attempts to determine the underlying emotion of the given text. </li>
-                    <li> <b>Web Crawler - </b>Web crawler that searches for a user given phrase, and searches for it on a selected website and any sublinked pages. </li>
-                    <li> <b>Kumon Book Tracking Application - </b>Allow Kumon owner to keep track of answer booklets being checked out and track which students have a book at any given time. </li>
-                    <li> <b>Huffman Compression - </b>Recreated the Huffman Algorithm, which uses frequency trees to have lossless data compression. </li>
-                    <li> <b>Math Matrix Solver - </b>Created a program that models and solves math matrices. </li>
-                    </ul>
-                  </p>
-               </div>
-
-            </div> <!-- Java end -->
 
             <!-- Skills Section --> 
             <div class = "row item">
