--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
                <div class="twelve columns">
 
                   <h3 style="color:gray;">Android Applications</h3>
-                  <h4 style="color:gray;""> Helped design user interfaces and partial development on various Android Applications published on the Google Play Store </h2>
-
+                  <p> Helped design user interfaces &amp; develop on various Android Applications published on the Google Play Store </p>
+                  
                   <p> <!--- Idented with bullet points -->
                     <ul class = "disc">
                     <li> <b> Smart Actions: </b> Currently in development, allows the user to automate actions based on trigger events determined by the user. Example of this is the user setting the phone's Ringer volume to a specific level upon arriving to a GPS region designated as "Home" or "Workplace" </li>
