Added github to applications list

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
                   <h3 style="color:gray;">Android Applications</h3>
                   <p> Helped design user interfaces &amp; develop on various Android Applications published on the Google Play Store </p>
-                  
+
                   <p> <!--- Idented with bullet points -->
                     <ul class = "disc">
                     <li> <b> Smart Actions: </b> Currently in development, allows the user to automate actions based on trigger events determined by the user. Example of this is the user setting the phone's Ringer volume to a specific level upon arriving to a GPS region designated as "Home" or "Workplace" </li>
@@ -187,7 +187,7 @@
                   <li> <b> High-level &amp; Scripting Languages: </b>Java, C, Python, Perl, Bash </li>
                   <li> <b> Database Languages: </b>SQL </li>
                   <li> <b> Development Platform: </b>Android Studio, Eclipse, IntelliJ, PyCharm </li>
-                  <li> <b> Applications: </b>FileZilla, Putty </li> 
+                  <li> <b> Applications: </b>FileZilla, Putty, GitHub </li> 
                   </ul>
                 </p>
 
