Modified Resume Address

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                <li><a href="https://www.linkedin.com/in/mukulmodi/" title="LinkedIn"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://www.techbits.mukulmodi.com" title="Blog"><i class="fa fa-rss"></i></a></li>
                <li><a href="mailto:mukul.modi@gmail.com" title="Email"><i class="fa fa-envelope"></i></a></li>
-               <li><a href="MukulModiResume_Web.pdf" target="_blank" title="View Resume"><i class="fa fa-file"></i></a></li>
+               <li><a href="MukulModi_ResumeWeb.pdf" target="_blank" title="View Resume"><i class="fa fa-file"></i></a></li>
             </ul>
          </div>
       </div>
@@ -287,7 +287,7 @@
                <li><a href="https://www.linkedin.com/in/mukulmodi/" title="LinkedIn"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://www.techbits.mukulmodi.com" title="Blog"><i class="fa fa-rss"></i></a></li>
                <li><a href="mailto:mukul.modi@gmail.com" title="Email"><i class="fa fa-envelope"></i></a></li>
-               <li><a href="MukulModiResume_Web.pdf" target="_blank" title="View Resume"><i class="fa fa-file"></i></a></li>
+               <li><a href="MukulModi_ResumeWeb" target="_blank" title="View Resume"><i class="fa fa-file"></i></a></li>
             </ul>
 
             <ul class="copyright">
