About Me Typos fixed

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
                 <h2>About Me</h2>
                 <p>
-                    As a computer science student at the University of Texas at Dallas, I'm always on the look outs for changes in the technology field. Projects outside of standard school coursework is inspired are usually inspired from anythign that interests me, let it be the news of the day, or something I come across while walking about. I believe in doing things that interest you, or finding a way to find what you are working on interesting, and by doing that, I always have a strong interest in any project I take up.
+                    As a computer science student at the University of Texas at Dallas, I'm always on the look out for changes in the technology field. My projects outside of standard school coursework are usually inspired from anythign that interests me, let it be the news of the day, or something I come across while walking about. I believe in doing things that interest you, or finding a way to make what you are working on interesting, and by doing that, I always have a strong interest in any project I take up.
                 </p>
 
             </div>
