Change Kumon font color to gray

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
                <div class="twelve columns">
 
-                  <h3>Kumon of Plano - Shepherd</h3>
+                  <h3 style="color:gray">Kumon of Plano - Shepherd</h3>
 
                   <p> <!--- Idented with bullet points -->
                     <ul class = "disc">
