UTD Font color change to gray

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
                <div class="twelve columns">
 
-                  <h3>University of Texas at Dallas</h3>
+                  <h3 style = "color:gray">University of Texas at Dallas</h3>
                   <p class="info">B.S in Computer Science <span>&bull;</span> <em class="date">December 2018</em></p>
 
                   <p>
