Updated email address

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                <li><a href="https://www.google.com/+MukulModi" title="Google+"><i class="fa fa-google-plus"></i></a></li>
                <li><a href="https://www.linkedin.com/in/mukulmodi/" title="LinkedIn"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://www.techbits.mukulmodi.com" title="Blog"><i class="fa fa-rss"></i></a></li>
-               <li><a href="mailto:mukul.modi@gmail.com" title="Email"><i class="fa fa-envelope"></i></a></li>
+               <li><a href="mailto:mmodi@mukulmodi.com" title="Email"><i class="fa fa-envelope"></i></a></li>
                <li><a href="https://drive.google.com/file/d/0BzKOKKxqS7fgcUxiUEFlR2xOMjg/view?usp=sharing" target="_blank" title="View Resume"><i class="fa fa-file"></i></a></li>
             </ul>
          </div>
