--- a/index.html
+++ b/index.html
@@ -104,12 +104,13 @@
                   Relevant Computer Science Coursework include the following: </p>
                     <p> <!-- Indented List, bullet points -->
                       <ul class = "disc">
-                        <li> <b>Discrete Mathematics - </b>Study of advanced counting methods, reccurence relations, and graph theory. </li>
-                        <li> <b>Organization of Programming Languages - </b>Principles of design and implementation of programming languages. </li>
+                        <li> <b> Database Systems - </b> Design and implementation of Database management systems. Course material focused on SQL, JDBC, Data models, data description languages, index organization, file security, data integrity, and reliability. </li>
                         <li> <b> C/C++ in a Unix Environment - </b>Utilizing object oriented programming techniques while also becoming familiar with a UNIX environment. </li>
                         <li> <b>Algorithm Analysis &amp; Data Structures - </b>Big O-notation and time complexity analysis of various data structures including stacks, queues, trees, heaps, hashing, and various sorting techniques. </li>
+                        <li> <b>Discrete Mathematics - </b>Study of advanced counting methods, reccurence relations, and graph theory. </li>
                         <li> <b>Software Engineering -  </b>Study of software life cycle models, techniques for software design and testing. </li>
                         <li> <b>Digital Logic &amp; Computer Design - </b>Boolean algebra and logic circuits; gate level design, registers, and memory unit; Design of data path and control unit for a small computer. </li>
+                        <li> <b>Organization of Programming Languages - </b>Principles of design and implementation of programming languages. </li>
                       </ul>      
                   </p>
                </div>
