Added Spring 2018 Classes

--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
                   Relevant Computer Science Coursework include the following: </p>
                     <p> <!-- Indented List, bullet points -->
                       <ul class = "disc">
+                        <li> <b> Artificial Intelligence - </b> Course focuses on problem solving by search, using uninformed search, informed search, constraint satisfcation, and adverserial search. Game theory and knowledge reasoning through inference, theorem proving, and probablistic reasoning using Bayesian networks. </li>
+                        <li> <b> Machine Learning - </b> Developing algorithms for creating computer programs that can improve their performance through learning. Covered topics are cross validation, decision trees, neural nets, computation learning theory, Hidden Markov Models, and supervised and unsupervised learning. </li>
+                        <li> <b> Computer Networks - </b> Design and analysis of computer networks, covering the ISO reference model, transmission media, routing, congestion control, internetworking, and connection management. </li>
+                        <li> <b> Operating Systems Concepts - </b> Operating System design, implementation, and usage. Also covered is process management, memory management, file systems, and deadlocks. </li>
                         <li> <b> Database Systems - </b> Design and implementation of Database management systems. Course material focused on SQL, JDBC, Data models, data description languages, index organization, file security, data integrity, and reliability. </li>
                         <li> <b> C/C++ in a Unix Environment - </b>Utilizing object oriented programming techniques while also becoming familiar with a UNIX environment. </li>
                         <li> <b>Algorithm Analysis &amp; Data Structures - </b>Big O-notation and time complexity analysis of various data structures including stacks, queues, trees, heaps, hashing, and various sorting techniques. </li>
